--- a/Tennis.html
+++ b/Tennis.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <canvas id="gameCanvas" width="800" height="600"></canvas>
@@ -172,15 +173,6 @@ function colorRect(leftX,topX,width,height,drawColor){
                  
 }
 
-
-
-
-
-
-
 </script>
-
-
-
 
 </html>
